Fixed so that Kontakta mig doesn't overflow, but it's a ugly hack, gotta find a better way to solve it.

--- a/css/main.scss
+++ b/css/main.scss
@@ -108,13 +108,13 @@ body {
 /* ==============
     MOBILE: Menu
    ============== */
-
-nav ul {
+nav {
+    ul {
     margin: 0;
     padding: 0;
-}
+    }
 
-nav a {
+    a {
     display: block;
     margin-bottom: 10px;
     padding: 15px 0;
@@ -122,7 +122,6 @@ nav a {
     text-align: center;
     text-decoration: none;
     font-weight: bold;
-
     color: white;
     /*Nice gradient, unnice code to handle it*/
     @include linear-gradient-background($blue, $darkenPercent);
@@ -134,15 +133,13 @@ nav a {
         background-image:      -o-linear-gradient(top, #3399FD, darken(#3399FD, 15%));
         background-image:         linear-gradient(to bottom, #3399FD, darken(#3399FD, 15%));
         */
-}
-
-nav a:hover,
-nav a:visited {
-    color: white;
-}
-
-nav a:hover {
-    text-decoration: underline;
+    }
+    a:hover, a:visited {
+        color:white;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
 }
 
 /* ==============
@@ -348,6 +345,7 @@ input[type="submit"] {
         li:last-child a {
             border-top-right-radius: 10px;
             margin-right: 0;
+            font-size:13px;
         }
     }
 
@@ -363,7 +361,11 @@ input[type="submit"] {
         margin: 0 0.7%;
     }
 }
-
+@media only screen and (min-width: 560px) {
+    nav li:last-child  a{
+        font-size: 16px;
+    }
+}
 @media only screen and (min-width: 768px) {
 
 /* ====================
